--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+node_modules
+.idea
+*.iml
+out
+gen
 # Logs
 logs
 *.log
@@ -5,7 +10,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
+# production
+/build
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
